CUDA error rendering Attic scene #108316

Closed
opened 2023-05-26 15:12:25 +02:00 by William Leeson · 1 comment
Member

System Information
Operating system: Linux-6.2.15-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 4.0.0 Alpha, branch: upstream_main, commit date: 2023-05-25 07:59, hash: f669f6cd8c1d
Worked: (newest version of Blender that worked as expected)

Short description of error
Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array integrator_compact_shadow_states)
Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array)

Exact steps for others to reproduce the error
You'll need a debug build

Load in the attic.blend benchmark scene
Hit F12 to render

Then you'll get

Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array integrator_compact_shadow_states)
Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array)

I have a call stack for this using the following command line

/usr/local/cuda-12.1/bin/compute-sanitizer --tool memcheck ../build_linux_debug/bin/blender

  ========= Invalid __global__ read of size 4 bytes
  =========     at 0x120 in /home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:75:is_light(const KernelLightTreeEmitter *)
  =========     by thread (275,0,0) in block (30,0,0)
  =========     Address 0x7f39f1eb09ec is out of bounds
  =========     and is 20 bytes before the nearest allocation at 0x7f39f1eb0a00 of size 468,512 bytes
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:80:is_mesh(const KernelLightTreeEmitter *) [0x190]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:608:int light_tree_cluster_select_emitter<(bool)0>(const KernelGlobalsGPU *, float &, float3 &, float3 &, float &, bool, int *, float *) [0x3fb0]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:692:bool light_tree_sample<(bool)0>(const KernelGlobalsGPU *, float, float, float, float, float3, float3, float, int, int, unsigned int, LightSample *) [0x1a50]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/sample.h:359:light_sample_from_position(const KernelGlobalsGPU *, const RNGState *, float, float, float, float, float3, float3, int, int, unsigned int, LightSample *) [0x1230]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:159:integrate_surface_direct_light<447U> [0x163d0]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:685:bool integrate_surface<(unsigned int)447>(const KernelGlobalsGPU *, int, float *) [0x2eb10]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:723:integrator_shade_surface<447U,(DeviceKernel)8> [0x9f0]
  =========     Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:260:kernel_gpu_integrator_shade_surface [0x29a0]
  =========     Saved host backtrace up to driver entry point at kernel launch time
  =========     Host Frame: [0x30b442]
  =========                in /lib64/libcuda.so.1
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/device/cuda/queue.cpp:111:ccl::CUDADeviceQueue::enqueue(ccl::DeviceKernel, int, ccl::DeviceKernelArguments const&) [0x3ef656f]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/device/optix/queue.cpp:52:ccl::OptiXDeviceQueue::enqueue(ccl::DeviceKernel, int, ccl::DeviceKernelArguments const&) [0x3f1f1f2]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work_gpu.cpp:530:ccl::PathTraceWorkGPU::enqueue_path_iteration(ccl::DeviceKernel, int) [0x584469a]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work_gpu.cpp:459:ccl::PathTraceWorkGPU::enqueue_path_iteration() [0x5844309]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work_gpu.cpp:345:ccl::PathTraceWorkGPU::render_samples_impl(ccl::PathTraceWork::RenderStatistics&, int, int, int) [0x5843df7]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work.cpp:152:ccl::PathTraceWork::render_samples(ccl::PathTraceWork::RenderStatistics&, int, int, int) [0x5834ec0]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace.cpp:436:ccl::PathTrace::path_trace(ccl::RenderWork&)::{lambda(int)#1}::operator()(int) const [0x581c3b2]
  =========                in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender
  =========     Host Frame:/home/william/Source/blender-git/lib/linux_x86_64_glibc_228/tbb/include/tbb/parallel_for.h:176:tbb::internal::parallel_for_body<ccl::PathTrace::path_trace(ccl::RenderWork&)::{lambda(int)#1}, int>::operator()(tbb::blocked_range<int> const&) const [0x582a611]
**System Information** Operating system: Linux-6.2.15-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 4.0.0 Alpha, branch: upstream_main, commit date: 2023-05-25 07:59, hash: `f669f6cd8c1d` Worked: (newest version of Blender that worked as expected) **Short description of error** Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array integrator_compact_shadow_states) Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array) **Exact steps for others to reproduce the error** You'll need a debug build Load in the attic.blend benchmark scene Hit F12 to render Then you'll get Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array integrator_compact_shadow_states) Illegal address in CUDA queue copy_from_device (integrator_init_from_bake integrator_shade_surface integrator_sorted_paths_array) I have a call stack for this using the following command line /usr/local/cuda-12.1/bin/compute-sanitizer --tool memcheck ../build_linux_debug/bin/blender ========= Invalid __global__ read of size 4 bytes ========= at 0x120 in /home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:75:is_light(const KernelLightTreeEmitter *) ========= by thread (275,0,0) in block (30,0,0) ========= Address 0x7f39f1eb09ec is out of bounds ========= and is 20 bytes before the nearest allocation at 0x7f39f1eb0a00 of size 468,512 bytes ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:80:is_mesh(const KernelLightTreeEmitter *) [0x190] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:608:int light_tree_cluster_select_emitter<(bool)0>(const KernelGlobalsGPU *, float &, float3 &, float3 &, float &, bool, int *, float *) [0x3fb0] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/tree.h:692:bool light_tree_sample<(bool)0>(const KernelGlobalsGPU *, float, float, float, float, float3, float3, float, int, int, unsigned int, LightSample *) [0x1a50] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/light/sample.h:359:light_sample_from_position(const KernelGlobalsGPU *, const RNGState *, float, float, float, float, float3, float3, int, int, unsigned int, LightSample *) [0x1230] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:159:integrate_surface_direct_light<447U> [0x163d0] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:685:bool integrate_surface<(unsigned int)447>(const KernelGlobalsGPU *, int, float *) [0x2eb10] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:723:integrator_shade_surface<447U,(DeviceKernel)8> [0x9f0] ========= Device Frame:/home/william/Source/blender-git/build_linux_debug/bin/4.0/scripts/addons/cycles/source/kernel/integrator/shade_surface.h:260:kernel_gpu_integrator_shade_surface [0x29a0] ========= Saved host backtrace up to driver entry point at kernel launch time ========= Host Frame: [0x30b442] ========= in /lib64/libcuda.so.1 ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/device/cuda/queue.cpp:111:ccl::CUDADeviceQueue::enqueue(ccl::DeviceKernel, int, ccl::DeviceKernelArguments const&) [0x3ef656f] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/device/optix/queue.cpp:52:ccl::OptiXDeviceQueue::enqueue(ccl::DeviceKernel, int, ccl::DeviceKernelArguments const&) [0x3f1f1f2] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work_gpu.cpp:530:ccl::PathTraceWorkGPU::enqueue_path_iteration(ccl::DeviceKernel, int) [0x584469a] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work_gpu.cpp:459:ccl::PathTraceWorkGPU::enqueue_path_iteration() [0x5844309] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work_gpu.cpp:345:ccl::PathTraceWorkGPU::render_samples_impl(ccl::PathTraceWork::RenderStatistics&, int, int, int) [0x5843df7] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace_work.cpp:152:ccl::PathTraceWork::render_samples(ccl::PathTraceWork::RenderStatistics&, int, int, int) [0x5834ec0] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/blender/intern/cycles/integrator/path_trace.cpp:436:ccl::PathTrace::path_trace(ccl::RenderWork&)::{lambda(int)#1}::operator()(int) const [0x581c3b2] ========= in /home/william/Source/blender-git/blender/../build_linux_debug/bin/blender ========= Host Frame:/home/william/Source/blender-git/lib/linux_x86_64_glibc_228/tbb/include/tbb/parallel_for.h:176:tbb::internal::parallel_for_body<ccl::PathTrace::path_trace(ccl::RenderWork&)::{lambda(int)#1}, int>::operator()(tbb::blocked_range<int> const&) const [0x582a611]
William Leeson added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-26 15:12:26 +02:00
Brecht Van Lommel was assigned by William Leeson 2023-05-26 15:12:26 +02:00
Sergey Sharybin was assigned by William Leeson 2023-05-26 15:12:26 +02:00
Member

Can confirm

Can confirm
Pratik Borhade added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-27 14:04:46 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-27 14:19:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108316
No description provided.