Fix #108316: CUDA error rendering Attic scene

The light tree dependent on the first threshold to evaluate to 1
when picking up an emitter.